snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/maven-metadata.xml.md5
8ce48f36e7935af83a6993cc30ff84bb